--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -1,196 +1,13 @@
 ﻿<Application x:Class="ExViewer.App"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
-             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-             xmlns:local="using:ExViewer.Views"
-             xmlns:pr="using:PullToRefresh.UWP">
+             xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml">
     <Application.Resources>
         <ResourceDictionary>
-            <local:RateStringConverter x:Key="RateStringConverter" />
-            <local:StringConverter x:Key="StringConverter" />
-            <local:BooleanToVisibilityConverter x:Key="TrueToVisibleConverter"
-                                                BooleanForVisible="True" />
-            <local:BooleanToVisibilityConverter x:Key="FalseToVisibleConverter"
-                                                BooleanForVisible="False" />
-            <local:ObjectToBooleanConverter x:Key="NullToVisibleConverter"
-                                            Default="True"
-                                            Others="False">
-                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-            </local:ObjectToBooleanConverter>
-            <local:ObjectToBooleanConverter x:Key="NullToCollapsedConverter"
-                                            Default="True"
-                                            Others="False">
-                <local:BooleanToVisibilityConverter BooleanForVisible="False" />
-            </local:ObjectToBooleanConverter>
-            <local:LengthConverter x:Key="LengthConverter" />
-            <local:EmptyConverter x:Key="EmptyConverter" />
-            <local:DefaultConverter x:Key="DefaultConverter" />
-            <local:NullableConverter x:Key="NullableConverter" />
-            <local:LogicalNotConverter x:Key="LogicalNotConverter" />
-            <local:EnumToStringConverter x:Key="EnumToStringConverter" />
-            <local:GalleryToTitleStringConverter x:Key="GalleryToTitleStringConverter" />
-            <local:RangeToBooleanConverter x:Key="ZeroToVisibleConverter"
-                                           Min="-0.1"
-                                           Max="0.1">
-                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-            </local:RangeToBooleanConverter>
-            <local:OperationStateToBrushConverter x:Key="OperationStateToBrushConverter" />
-            <local:EnumToBooleanConverter x:Key="OperationStateToVisibilityConverter"
-                                          xmlns:VM="using:ExViewer.ViewModels"
-                                          Others="True">
-                <local:EnumToBooleanConverter.ValueForFalse>
-                    <VM:OperationState>NotStarted</VM:OperationState>
-                </local:EnumToBooleanConverter.ValueForFalse>
-                <local:EnumToBooleanConverter.ValueForTrue>
-                    <VM:OperationState>Started</VM:OperationState>
-                </local:EnumToBooleanConverter.ValueForTrue>
-                <local:BooleanToVisibilityConverter BooleanForVisible="True" />
-            </local:EnumToBooleanConverter>
-            <local:MathFuctionConverter x:Key="IndexToStringConverter"
-                                        Function="x + 1"
-                                        InversedFunction="x - 1" />
-            <local:DateTimeToStringConverter x:Key="DateTimeToStringConverter" />
-            <local:SizeConverter x:Key="SizeConverter" />
-
-            <Style x:Key="StackPanelListViewItemStyle"
-                   TargetType="ListViewItem">
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="ListViewItem">
-                            <ContentPresenter Content="{TemplateBinding Content}" />
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-                <Setter Property="Margin"
-                        Value="0" />
-                <Setter Property="Padding"
-                        Value="0" />
-                <Setter Property="MinHeight"
-                        Value="0" />
-                <Setter Property="MinWidth"
-                        Value="0" />
-                <Setter Property="IsTabStop"
-                        Value="False" />
-            </Style>
-
-            <Style x:Key="GalleryListViewItemStyle"
-                   TargetType="ListViewItem">
-                <Setter Property="HorizontalContentAlignment"
-                        Value="Stretch" />
-                <Setter Property="VerticalContentAlignment"
-                        Value="Stretch" />
-                <Setter Property="Padding"
-                        Value="0" />
-            </Style>
-
-            <Style x:Key="GalleryListViewStyle"
-                   TargetType="ListView">
-                <Setter Property="IsItemClickEnabled"
-                        Value="True" />
-                <Setter Property="SelectionMode"
-                        Value="None" />
-                <Setter Property="VerticalAlignment"
-                        Value="Top" />
-                <Setter Property="ItemContainerStyle"
-                        Value="{StaticResource GalleryListViewItemStyle}" />
-                <Setter Property="ContinuumNavigationTransitionInfo.IsExitElement"
-                        Value="True" />
-                <Setter Property="ScrollViewer.IsVerticalScrollChainingEnabled"
-                        Value="True" />
-            </Style>
-
-            <Style x:Key="PullRefreshProgressControlStyle"
-                   TargetType="pr:PullRefreshProgressControl">
-                <Setter Property="Height"
-                        Value="80" />
-                <Setter Property="Width"
-                        Value="200" />
-                <Setter Property="IsTabStop"
-                        Value="False" />
-                <Setter Property="Template">
-                    <Setter.Value>
-                        <ControlTemplate TargetType="pr:PullRefreshProgressControl">
-                            <Grid>
-                                <Grid.RowDefinitions>
-                                    <RowDefinition />
-                                    <RowDefinition Height="Auto" />
-                                </Grid.RowDefinitions>
-                                <VisualStateManager.VisualStateGroups>
-                                    <VisualStateGroup x:Name="VisualStateGroup">
-                                        <VisualState x:Name="Normal" />
-                                        <VisualState x:Name="ReleaseToRefresh">
-                                            <Storyboard>
-                                                <DoubleAnimation Storyboard.TargetName="txt"
-                                                                 Storyboard.TargetProperty="Opacity"
-                                                                 To="0"
-                                                                 Duration="0"
-                                                                 BeginTime="0:0:0.05">
-                                                </DoubleAnimation>
-                                                <DoubleAnimation Storyboard.TargetName="txt2"
-                                                                 Storyboard.TargetProperty="Opacity"
-                                                                 To="1"
-                                                                 Duration="0"
-                                                                 BeginTime="0:0:0.05">
-                                                </DoubleAnimation>
-                                                <DoubleAnimation Storyboard.TargetName="rect"
-                                                                 Storyboard.TargetProperty="Opacity"
-                                                                 To="1"
-                                                                 Duration="0:0:0.1">
-                                                    <DoubleAnimation.EasingFunction>
-                                                        <QuadraticEase EasingMode="EaseIn" />
-                                                    </DoubleAnimation.EasingFunction>
-                                                </DoubleAnimation>
-                                            </Storyboard>
-                                        </VisualState>
-                                    </VisualStateGroup>
-                                </VisualStateManager.VisualStateGroups>
-                                <TextBlock x:Name="txt"
-                                           Text="{TemplateBinding PullToRefreshText}"
-                                           HorizontalAlignment="Center"
-                                           VerticalAlignment="Bottom" />
-                                <TextBlock x:Name="txt2"
-                                           Text="{TemplateBinding ReleaseToRefreshText}"
-                                           HorizontalAlignment="Center"
-                                           VerticalAlignment="Bottom"
-                                           Opacity="0" />
-                                <Rectangle x:Name="rect"
-                                           StrokeThickness="0"
-                                           Width="200"
-                                           Height="4"
-                                           Fill="{StaticResource SystemControlForegroundAccentBrush}"
-                                           Margin="4"
-                                           Opacity="0.5"
-                                           VerticalAlignment="Bottom"
-                                           RenderTransformOrigin="0.5,0.5"
-                                           Grid.Row="1">
-                                    <Rectangle.RenderTransform>
-                                        <TransformGroup>
-                                            <ScaleTransform ScaleX="{Binding}" />
-                                        </TransformGroup>
-                                    </Rectangle.RenderTransform>
-                                </Rectangle>
-                            </Grid>
-                        </ControlTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
-
-            <Style x:Key="PullToRefreshBoxStyle"
-                   TargetType="pr:PullToRefreshBox">
-                <Setter Property="RefreshThreshold"
-                        Value="79" />
-                <Setter Property="IsTabStop"
-                        Value="False" />
-                <Setter Property="TopIndicatorTemplate">
-                    <Setter.Value>
-                        <DataTemplate>
-                            <pr:PullRefreshProgressControl Progress="{Binding}"
-                                                           PullToRefreshText="Pull to refresh"
-                                                           ReleaseToRefreshText="Release to refresh"
-                                                           Style="{StaticResource PullRefreshProgressControlStyle}" />
-                        </DataTemplate>
-                    </Setter.Value>
-                </Setter>
-            </Style>
+            <ResourceDictionary.MergedDictionaries>
+                <ResourceDictionary Source="Themes/GenericOverride.xaml" />
+                <ResourceDictionary Source="Themes/NamedStyles.xaml" />
+                <ResourceDictionary Source="Themes/Converters.xaml" />
+            </ResourceDictionary.MergedDictionaries>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
