Account manage & bug fix for comments
Former-commit-id: e91d9d628dc66aafbe3e035841e773c8f3e07086 [formerly aef56a9ac3a3d84ada9c13908a1534d00621d5d3]
Former-commit-id: 12b63807fba422be9487bf2f2b6bdb7f68f25c64

--- a/ExViewer/Views/GalleryPage.xaml
+++ b/ExViewer/Views/GalleryPage.xaml
@@ -477,14 +477,14 @@
                             <PivotItem.Header>
                                 <StackPanel Orientation="Horizontal">
                                     <TextBlock Text="Comments" />
-                                    <TextBlock Text="{x:Bind VM.CommentCount, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter=[\{0\}]}"
-                                               Visibility="{x:Bind VM.CommentCount, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
+                                    <TextBlock Text="{x:Bind VM.Gallery.Comments.Count, Mode=OneWay, Converter={StaticResource StringConverter}, ConverterParameter=[\{0\}]}"
+                                               Visibility="{x:Bind VM.Gallery.Comments, Mode=OneWay, Converter={StaticResource NullToCollapsedConverter}}"
                                                Style="{StaticResource CaptionTextBlockStyle}"
                                                VerticalAlignment="Top" />
                                 </StackPanel>
                             </PivotItem.Header>
                             <ListView x:Name="lv_Comments"
-                                      ItemsSource="{x:Bind VM.Comments, Mode=OneWay}"
+                                      ItemsSource="{x:Bind VM.Gallery.Comments, Mode=OneWay}"
                                       VerticalAlignment="Top"
                                       Loaded="lv_Comments_Loaded"
                                       SelectionMode="None"
@@ -494,14 +494,14 @@
                                     <TextBlock HorizontalAlignment="Center"
                                                Margin="12"
                                                Style="{StaticResource BaseTextBlockStyle}"
-                                               Visibility="{x:Bind VM.Comments.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
+                                               Visibility="{x:Bind VM.Gallery.Comments.Count, Mode=OneWay, Converter={StaticResource ZeroToVisibleConverter}, FallbackValue=Collapsed}"
                                                Text="No comments" />
                                 </ListView.Header>
                                 <ListView.Footer>
                                     <TextBlock HorizontalAlignment="Center"
                                                Margin="12"
                                                Style="{StaticResource BaseTextBlockStyle}"
-                                               Visibility="{x:Bind VM.Comments, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
+                                               Visibility="{x:Bind VM.Gallery.Comments, Converter={StaticResource NullToVisibleConverter}, Mode=OneWay}"
                                                Text="Loading comments..." />
                                 </ListView.Footer>
                             </ListView>
