--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -8,6 +8,7 @@
                 <ResourceDictionary Source="Themes/NamedStyles.xaml" />
                 <ResourceDictionary Source="Themes/Converters.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <Color x:Key="SplashColor">#ffe7dfca</Color>
         </ResourceDictionary>
     </Application.Resources>
 </Application>
