--- a/ExViewer/Views/LogOnDialog.xaml
+++ b/ExViewer/Views/LogOnDialog.xaml
@@ -10,6 +10,8 @@
                SecondaryButtonText="?"
                PrimaryButtonClick="ContentDialog_PrimaryButtonClick"
                SecondaryButtonClick="ContentDialog_SecondaryButtonClick"
+               IsPrimaryButtonEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}"
+               IsSecondaryButtonEnabled="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource LogicalNotConverter}, Mode=OneWay}"
                MaxWidth="320">
     <ContentDialog.Template>
         <ControlTemplate TargetType="ContentDialog">
@@ -128,6 +130,7 @@
         <TextBox x:Name="tb_user"
                  Margin="0,4"
                  PlaceholderText="User Name"
+                 InputScope="AlphanumericHalfWidth"
                  TextChanged="tb_TextChanged" />
         <PasswordBox x:Name="pb_pass"
                      Margin="0,4"
@@ -155,6 +158,7 @@
                      Margin="0,4"
                      Grid.Row="1"
                      PlaceholderText="ReCaptcha"
+                     InputScope="AlphanumericHalfWidth"
                      TextChanged="tb_TextChanged"
                      IsSpellCheckEnabled="False" />
             <Button x:Name="btn_ReloadReCaptcha"
@@ -174,5 +178,8 @@
                    Margin="0,4"
                    HorizontalAlignment="Stretch"
                    TextWrapping="WrapWholeWords" />
+        <ProgressBar x:Name="pb_Loading"
+                     Margin="0,4"
+                     Visibility="{x:Bind pb_Loading.IsIndeterminate, Converter={StaticResource TrueToVisibleConverter}, Mode=OneWay}" />
     </StackPanel>
 </ContentDialog>
