--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -53,45 +53,87 @@
         <SplitView x:Name="sv_root"
                    IsTabStop="False">
             <SplitView.Pane>
-                <ListView x:Name="lv_Pane"
-                          Style="{StaticResource StackPanelListViewStyle}">
-                    <ListView.Transitions>
-                        <TransitionCollection />
-                    </ListView.Transitions>
+                <Grid x:Name="gd_Pane">
+                    <Grid.RowDefinitions>
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="Auto" />
+                        <RowDefinition Height="20" />
+                        <RowDefinition Height="Auto" />
+                    </Grid.RowDefinitions>
+                    <Grid.ColumnDefinitions>
+                        <ColumnDefinition />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition Width="Auto" />
+                        <ColumnDefinition />
+                    </Grid.ColumnDefinitions>
                     <Button Style="{StaticResource SplitButtonStyle}"
-                            Click="btn_pane_Click" />
-                    <controls:SplitViewTab x:Name="svt_Search"
-                                           Content="Search"
-                                           Click="svt_Click">
-                        <controls:SplitViewTab.Icon>
-                            <FontIcon Glyph="&#xE7C5;"
-                                      FontSize="16" />
-                        </controls:SplitViewTab.Icon>
-                    </controls:SplitViewTab>
-                    <controls:SplitViewTab x:Name="svt_Cache"
-                                           Content="Saved galleries"
-                                           Click="svt_Click">
-                        <controls:SplitViewTab.Icon>
-                            <FontIcon Glyph="&#xE8B7;"
-                                      FontSize="16" />
-                        </controls:SplitViewTab.Icon>
-                    </controls:SplitViewTab>
-                    <controls:SplitViewTab x:Name="svt_Settings"
-                                           Content="Settings"
-                                           Click="svt_Click">
-                        <controls:SplitViewTab.Icon>
-                            <FontIcon Glyph="&#xE713;"
-                                      FontSize="16" />
-                        </controls:SplitViewTab.Icon>
-                    </controls:SplitViewTab>
-                    <!--<controls:SplitViewButton x:Name="svb_LogOn"
-                                              Content="Log on"
-                                              Click="svb_LogOn_Click">
-                        <controls:SplitViewButton.Icon>
-                            <SymbolIcon Symbol="Contact" />
-                        </controls:SplitViewButton.Icon>
-                    </controls:SplitViewButton>-->
-                </ListView>
+                            Click="btn_pane_Click"
+                            Grid.ColumnSpan="999" />
+                    <Ellipse x:Name="eps_Avatar"
+                             Grid.Row="1"
+                             Grid.ColumnSpan="999"
+                             Width="100"
+                             Height="100"
+                             HorizontalAlignment="Center"
+                             VerticalAlignment="Center">
+                        <Ellipse.Fill>
+                            <ImageBrush>
+                                <ImageBrush.ImageSource>
+                                    <BitmapImage UriSource="{x:Bind userInfo.Avatar, TargetNullValue=ms-appx:///Assets/DefaultUser.png, FallbackValue=ms-appx:///Assets/DefaultUser.png}" />
+                                </ImageBrush.ImageSource>
+                            </ImageBrush>
+                        </Ellipse.Fill>
+                    </Ellipse>
+                    <TextBlock  Grid.Row="2"
+                                Grid.Column="1"
+                                Margin="8"
+                                MinWidth="80"
+                                MaxWidth="200"
+                                TextTrimming="CharacterEllipsis"
+                                Text="{x:Bind userInfo.DisplayName}"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center" />
+                    <Button Grid.Row="2"
+                            Grid.Column="2"
+                            x:Name="btn_ChangeUser"
+                            Content="&#xE895;"
+                            Click="btn_ChangeUser_Click"
+                            ToolTipService.ToolTip="Change user"
+                            Style="{StaticResource NavigationBackButtonSmallStyle}" />
+                    <ListView x:Name="lv_Pane"
+                              Grid.Row="999"
+                              Grid.ColumnSpan="999"
+                              Style="{StaticResource StackPanelListViewStyle}">
+                        <ListView.Transitions>
+                            <TransitionCollection />
+                        </ListView.Transitions>
+                        <controls:SplitViewTab x:Name="svt_Search"
+                                               Content="Search"
+                                               Click="svt_Click">
+                            <controls:SplitViewTab.Icon>
+                                <FontIcon Glyph="&#xE7C5;"
+                                          FontSize="16" />
+                            </controls:SplitViewTab.Icon>
+                        </controls:SplitViewTab>
+                        <controls:SplitViewTab x:Name="svt_Cache"
+                                               Content="Saved galleries"
+                                               Click="svt_Click">
+                            <controls:SplitViewTab.Icon>
+                                <FontIcon Glyph="&#xE8B7;"
+                                          FontSize="16" />
+                            </controls:SplitViewTab.Icon>
+                        </controls:SplitViewTab>
+                        <controls:SplitViewTab x:Name="svt_Settings"
+                                               Content="Settings"
+                                               Click="svt_Click">
+                            <controls:SplitViewTab.Icon>
+                                <FontIcon Glyph="&#xE713;"
+                                          FontSize="16" />
+                            </controls:SplitViewTab.Icon>
+                        </controls:SplitViewTab>
+                    </ListView>
+                </Grid>
             </SplitView.Pane>
             <Frame x:Name="fm_inner"
                    Navigating="fm_inner_Navigating"
