Localization for e-client
Former-commit-id: 13c80072912c7a4371f6db3cfc40a6a510a4ed68 [formerly 695f52142742e6d113a7486583954e439a0fe421]
Former-commit-id: 24027739cad9d5d01701a6c8925693045f77d9c6

--- a/ExViewer/App.xaml
+++ b/ExViewer/App.xaml
@@ -8,6 +8,12 @@
                 <ResourceDictionary Source="Themes/NamedStyles.xaml" />
                 <ResourceDictionary Source="Themes/Converters.xaml" />
             </ResourceDictionary.MergedDictionaries>
+            <ResourceDictionary.ThemeDictionaries>
+                <ResourceDictionary x:Key="Dark"
+                                    Source="Themes/Dark.xaml" />
+                <ResourceDictionary x:Key="Light"
+                                    Source="Themes/Light.xaml" />
+            </ResourceDictionary.ThemeDictionaries>
             <Color x:Key="SplashColor">#ffe7dfca</Color>
         </ResourceDictionary>
     </Application.Resources>
