ScrollBar, keyboard tip, New DB design, Bug fix
Former-commit-id: 0a693bbd0c0aee8f02d95a08259a098d692ddc56 [formerly f3d759ef6b6dec163c4a4b01e6600b5958fd42e1]
Former-commit-id: 64807021816ce4f5fa328e138a96b790457aee0e

--- a/ExViewer/Controls/GalleryViewer.xaml
+++ b/ExViewer/Controls/GalleryViewer.xaml
@@ -12,7 +12,7 @@
     <Grid Background="{x:Bind Background, Mode=OneWay}"
           BorderBrush="{x:Bind BorderBrush, Mode=OneWay}"
           BorderThickness="{x:Bind BorderThickness, Mode=OneWay}"
-          Margin="8,4"
+          Padding="8,4"
           x:Name="gd_Root">
         <Grid.ColumnDefinitions>
             <ColumnDefinition MaxWidth="150"
@@ -32,7 +32,6 @@
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="12" />
             </Grid.ColumnDefinitions>
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
