--- a/ExViewer/Controls/HtmlTextBlock.xaml
+++ b/ExViewer/Controls/HtmlTextBlock.xaml
@@ -7,6 +7,8 @@
              mc:Ignorable="d"
              d:DesignHeight="300"
              d:DesignWidth="400"
+             Loaded="UserControl_Loaded"
+             Unloaded="UserControl_Unloaded"
              IsTabStop="False">
     <RichTextBlock x:Name="Presenter"
                    Style="{x:Bind RichTextBlockStyle, Mode=OneWay}" />
