--- a/ExViewer/Themes/Generic.xaml
+++ b/ExViewer/Themes/Generic.xaml
@@ -333,7 +333,7 @@
                         </VisualStateManager.VisualStateGroups>
                         <controls:CategoryTag x:Name="ContentPresenter"
                                               Category="{TemplateBinding Category}"
-                                              Control.IsTemplateFocusTarget="True"/>
+                                              Control.IsTemplateFocusTarget="True" />
                         <Rectangle x:Name="Mask"
                                    StrokeThickness="0" />
                         <Rectangle x:Name="Focus"
@@ -346,6 +346,18 @@
             </Setter.Value>
         </Setter>
         <Setter Property="UseSystemFocusVisuals"
+                Value="False" />
+    </Style>
+
+    <Style TargetType="controls:HtmlTextBlock">
+        <Setter Property="Template">
+            <Setter.Value>
+                <ControlTemplate TargetType="controls:HtmlTextBlock">
+                    <RichTextBlock x:Name="Presenter"/>
+                </ControlTemplate>
+            </Setter.Value>
+        </Setter>
+        <Setter Property="IsTabStop"
                 Value="False" />
     </Style>
 </ResourceDictionary>
