--- a/ExViewer/Views/RootControl.xaml
+++ b/ExViewer/Views/RootControl.xaml
@@ -5,6 +5,7 @@
       xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
       xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
       mc:Ignorable="d"
+      IsTextScaleFactorEnabled="False"
       Loaded="Control_Loaded"
       Unloaded="Control_Unloaded"
       xmlns:controls="using:ExViewer.Controls"
