--- a/ExViewer/Views/SearchPage.xaml
+++ b/ExViewer/Views/SearchPage.xaml
@@ -57,18 +57,46 @@
                             <Setter Property="Foreground"
                                     Value="{StaticResource SystemControlForegroundBaseMediumBrush}" />
                         </Style>
+                        <DataTemplate x:Key="SearchHistory"
+                                      x:DataType="db:SearchHistory">
+                            <Grid>
+                                <Grid.ColumnDefinitions>
+                                    <ColumnDefinition Width="Auto" />
+                                    <ColumnDefinition />
+                                </Grid.ColumnDefinitions>
+                                <Grid.RowDefinitions>
+                                    <RowDefinition Height="Auto" />
+                                    <RowDefinition Height="Auto" />
+                                </Grid.RowDefinitions>
+                                <TextBlock Text="{x:Bind Content}"
+                                           Grid.Column="1" />
+                                <TextBlock Text="{x:Bind Time, ConverterParameter=Search history\, Last search on \{0\}, Converter={StaticResource DateTimeToStringConverter}}"
+                                           Style="{StaticResource SuggestionCaptionTextBlockStyle}"
+                                           Grid.Row="1"
+                                           Grid.Column="1" />
+                                <Path Fill="{ThemeResource SystemControlPageTextBaseHighBrush}"
+                                      StrokeThickness="0"
+                                      Stretch="Uniform"
+                                      Grid.RowSpan="2"
+                                      VerticalAlignment="Center"
+                                      Margin="8,0"
+                                      Data="M-12,-9 L-12,-3 L-6,-3 L-6,-4.5 L-10.5,-4.5 L-10.5,-9 Z
+                                      M-10.5,-5.809 
+                                      A12,12,0,1,1,-11.55,3.255
+                                      L-10.106,2.848
+                                      A10.5,10.5,0,1,0,-9.487,-4.5
+                                      L-10.5,-4.5 Z
+                                      M-0.75,-6
+                                      L0.75,-6 L0.75,-0.311
+                                      L4.95,3.889 L3.889,4.95
+                                      L-0.75,0.311" />
+                            </Grid>
+                        </DataTemplate>
                     </AutoSuggestBox.Resources>
                     <AutoSuggestBox.ItemTemplateSelector>
                         <controls:DataTemplateSelector>
-                            <controls:DataTemplateKeyValuePair Key="ExViewer.DataBase.SearchHistory">
-                                <DataTemplate x:DataType="db:SearchHistory">
-                                    <StackPanel>
-                                        <TextBlock Text="{x:Bind Content}" />
-                                        <TextBlock Text="{x:Bind Time, Converter={StaticResource DateTimeToStringConverter}, ConverterParameter=Search history\, Last search on \{0\}}"
-                                                   Style="{StaticResource SuggestionCaptionTextBlockStyle}" />
-                                    </StackPanel>
-                                </DataTemplate>
-                            </controls:DataTemplateKeyValuePair>
+                            <controls:DataTemplateKeyValuePair Key="ExViewer.DataBase.SearchHistory"
+                                                               Value="{StaticResource SearchHistory}" />
                         </controls:DataTemplateSelector>
                     </AutoSuggestBox.ItemTemplateSelector>
                     <AutoSuggestBox.TextBoxStyle>
@@ -78,6 +106,12 @@
                                     Value="AlphanumericHalfWidth" />
                         </Style>
                     </AutoSuggestBox.TextBoxStyle>
+                    <AutoSuggestBox.ItemContainerStyle>
+                        <Style TargetType="ListViewItem">
+                            <Setter Property="Padding"
+                                    Value="4,0" />
+                        </Style>
+                    </AutoSuggestBox.ItemContainerStyle>
                 </AutoSuggestBox>
                 <ScrollViewer x:Name="sv_AdvancedSearch"
                               x:DeferLoadStrategy="Lazy"
